--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,21 @@
 [submodule "evil"]
 	path = evil
 	url = https://gitorious.org/evil/evil.git
+[submodule "scala-mode2"]
+	path = scala-mode2
+	url = https://github.com/hvesalai/scala-mode2.git
+[submodule "scala-outline-popup"]
+	path = scala-outline-popup
+	url = https://github.com/ancane/scala-outline-popup.git
+[submodule "helm"]
+	path = helm
+	url = https://github.com/emacs-helm/helm.git
+[submodule "magit"]
+	path = magit
+	url = https://github.com/magit/magit.git
+[submodule "dash.el"]
+	path = dash.el
+	url = https://github.com/magnars/dash.el.git
+[submodule "emacs-color-theme-solarized"]
+	path = emacs-color-theme-solarized
+	url = https://github.com/sellout/emacs-color-theme-solarized.git
