--- a/.gitmodules
+++ b/.gitmodules
@@ -14,7 +14,7 @@
 	path = helm
 	url = https://github.com/emacs-helm/helm.git
 [submodule "magit"]
-	path = magit
+	path = site-lisp/magit
 	url = https://github.com/magit/magit.git
 [submodule "dash.el"]
 	path = dash.el
@@ -22,3 +22,6 @@
 [submodule "emacs-color-theme-solarized"]
 	path = emacs-color-theme-solarized
 	url = https://github.com/sellout/emacs-color-theme-solarized.git
+[submodule "evil-leader"]
+	path = evil-leader
+	url = git@github.com:cofi/evil-leader.git
